--- a/monanteras/gemista.tex
+++ b/monanteras/gemista.tex
@@ -37,7 +37,7 @@ Family member: Mom
 \marginalfigure{monanteras/images/Cooked gemista.jpg}{Gemista}{fig:gemista}
 
 \begin{enumerate}
-    \item Preheat oven to 350\degree F and grease a 9X13-inch ovenproof dish with Pam spray.
+    \item Preheat oven to 350\degree F and grease a 9~x~13-inch ovenproof dish with Pam spray.
     \item Wash the tomatoes and remove the stems. Slice the tops off each tomato, leaving a bit of flesh attached. Carefully remove the flesh out of each tomato and place it into a bowl. Place each one of the tomatoes into the prepared baking dish and place their tops aside.
     \item Cut the top of the peppers, clean the inside of each and place them in the baking dish, place their tops aside.
     \item Heat 1/2 cup of olive oil in a pot and cook the onion. Once softened, add the garlic and stir well. Add the minced meat, rice, parsley and mint, and stir well. Season with salt and pepper, and cook until the meat has browned. Add the insides of the tomatoes and 1/2 can of Heinz tomato juice. Stir well.
