--- a/monanteras/hortopita.tex
+++ b/monanteras/hortopita.tex
@@ -38,7 +38,7 @@ Family member: Grandma Elisavet
     \item Prepare the phyllo dough as instructed in the recipe for Tiropita. While the dough is resting, prepare your filling.
     \item In a hot pan, add some olive oil and cook the leek and onions until they have softened. Add the drained spinach and greens to the frying pan, stirring and folding the leaves in with a wooden spoon. Cook for about 5 minutes, until the water has evaporated. Transfer them to a large bowl.
     \item Once they have cooled, add the parsley, eggs and feta cheese. Mix well with a fork and set aside.
-    \item Preheat the oven to 350\degree F and prepare a 9X13-inch baking dish (tapsi) by brushing it with olive oil. You can also use a large round metal pan if you have to feed a family!
+    \item Preheat the oven to 350\degree F and prepare a 9~x~13-inch baking dish (tapsi) by brushing it with olive oil. You can also use a large round metal pan if you have to feed a family!
     \item Roll out your phyllo dough as instructed in the recipe for Tiropita and use the hortopita filling to make the Hortopita in the similar manner. Once you have laid the last piece of dough at the top, drizzle some olive oil on the top.
     \item Bake for 1 hour, or until the pita is brown at the top. Let it cool before slicing into pieces.
 \end{enumerate}
