--- a/monanteras/lasagna.tex
+++ b/monanteras/lasagna.tex
@@ -28,7 +28,7 @@ Family member: Mom
 \newthought{Lasagna} was a comforting dinner Mom used to make on Sundays. We would get yelled at for eating the top layer of pieces (: You can omit the ricotta \& spinach layer if you want and make it a very meat and cheesy lasagna!
 
 \begin{enumerate}
-    \item Preheat oven to 350\degree F and grease a 9X13-inch ovenproof dish with Pam spray.
+    \item Preheat oven to 350\degree F and grease a 9~x~13-inch ovenproof dish with Pam spray.
     \item Cook the lasagna noodles according to the package instructions. Once done, set aside.
     \item In a bowl, mix the ricotta cheese, eggs and spinach.
     \item Spread a thin layer of Garden Select Pasta Sauce, approximately 4 tbsp, in the bottom of the ovenproof dish. Top with 4 lasagna sheets or more, enough to cover the whole bottom of the dish.
