--- a/velsa/babka.tex
+++ b/velsa/babka.tex
@@ -44,7 +44,7 @@ Family member: Elsa \& Vaski
     \item Mix on medium for another 10 minutes until the dough pulls from the sides of the bowl and is smooth. You can add 1 tbsp of flour to help the dough unstick if needed. The key is to have a very smoothe dough - you can check if it passes the window pane test!
     \item Coat a large bowl with vegetable oil (or Pam spray), put the dough inside and cover with plastic wrap. Refrigerate overnight.
     \item The next day, start by making the filling: melt the chocolate and butter in the microwave and mix until smoothe. Stir in the powdered sugar, cocoa powder and cinnamon, and mix until it is homogeneous. Leave the filling aside until it hardens a little and becomes a paste.
-    \item Spray 2 loaf pans with Pam and cover with parchment paper. Take half of the dough from the fridge and roll it out into a 10X10-inch square. Spread half the chocolate chilling evenly on the dough. Place the dough on a baking sheet and in the fridge. Do the same with the second half of the dough.
+    \item Spray 2 loaf pans with Pam and cover with parchment paper. Take half of the dough from the fridge and roll it out into a 10~x~10-inch square. Spread half the chocolate chilling evenly on the dough. Place the dough on a baking sheet and in the fridge. Do the same with the second half of the dough.
     \item Roll both doughs into tight event logs, like when making cinnamon rolls. Cut the logs half lengthwise at the top.
     \item Keeping cut sides up, pinch the ends to hold them together and twist them. If making 2 loaves, cut the babka in half and transfer them to the loaf pans.
     \item Cover the pans with a damp towel and let rise in the over with the light on for 1h30 to 2 hours.
