--- a/velsa/pastitsio.tex
+++ b/velsa/pastitsio.tex
@@ -54,7 +54,7 @@ Family member: Elsa \& Vaski
     \item Bring a large pot of water and a pinch of salt to a boil and cook the pasta for 8-10 minutes, or follow the instructions on the package for al dente. Drain and toss with 4 tbsp of melted butter then let it cool.
     \item To make the Bechamel sauce, warm the whole milk in a pot or in the microwave. In a medium pot, melt the butter and then stir in the flour. Whisk on the stove for 1 minute. Remove the pot from the stove and slowly add some of the warmed milk, stirring constantly with the whisk until the mixture is smoothe. Break any lumps that may form, or strain the sauce into another pot if needed. Return the sauce to medium heat, and gradually at the remaining milk while whisking. Cook for approximately 15 minutes, always whisking, until the sauce is thickened and smoothe. Remove from the heat, season with salt, pepper and nutmeg.
     \item Fold the egg yolks into the sauce, whisking to fully incorporate them. Then add the remaining grated Kefalograviera cheese.
-    \item Preheat the oven to 350\degree F. Brush a 10X14-inch ovenproof dish with melted butter and sprinkle with breadcrumbs.
+    \item Preheat the oven to 350\degree F. Brush a 10~x~14-inch ovenproof dish with melted butter and sprinkle with breadcrumbs.
     \item Line the base of the dish with half the pasta mixture, aligning the pasta tubes if using the Misko No 2. Spread the meat mixture evenly on top, and cover with the remaining pasta tubes, aligning them just as previously. Pour the white sauce on top and season with pepper.
     \item Bake for about 1 hour or until the top is golden brown. Let the dish cool for at least 15 minutes before cutting into pieces and serving hot!
 \end{enumerate}
