--- a/monanteras/tiropita.tex
+++ b/monanteras/tiropita.tex
@@ -39,7 +39,7 @@ Family member: Grandma Elisavet
     \item To make the phyllo dough, put the flour and salt into a large bowl. Make a well in the center and pour in the olive oil, vinegar and 240g of the warm water. Mix the flour into the liquid mixture slowly until it comes together, adding the extra 10g of water if you need to to form a dough.
     \item Knead the dough into a soft elastic dough, then form a smooth ball. If you use a mixer, mix with the paddle attachment until a dough is formed, then switch to the hook and mix on medium for 5 minutes. Cover the dough with a cloth and let it rest for 1 hour.
     \item While the dough is resting, prepare your filling. In a hot pan, add some olive oil and cook the onions until they have softened. Remove them from the pan and transfer them to a large bowl. Once they have cooled, add the eggs, cheeses and 1 1/2 cups of the milk. Mix well with a fork and set aside. The mix should be slightly liquidy.
-    \item Preheat the oven to 350\degree F and prepare a 9X13-inch baking dish (tapsi) by brushing it with olive oil.
+    \item Preheat the oven to 350\degree F and prepare a 9~x~13-inch baking dish (tapsi) by brushing it with olive oil.
     \item Divide the dough into 5 equal balls of 160g, take 1 ball and place the others under a cloth. Roll out the dough into a thin rectangle to fit the size of the dish, place it at the bottom of the dish and brush with some olive oil. Spread 1/4 of the filling equally over the dough.
     \item Roll out a second ball of dough into a thin rectangle, place it on top of the filling, and brush with olive oil. Spread another 1/4 of the filling over the dough. Continue until you have used all the filling and remaining pieces of dough.
     \item Once you have laid the last piece of dough at the top, brush a little olive oil or melted butter at the top. Pour a little bit of milk on the top
